--- a/idf_component.yml
+++ b/idf_component.yml
@@ -26,4 +26,4 @@ issues: https://github.com/esp-idf-lib/ms5611/issues
 discussion: https://github.com/esp-idf-lib/core/discussions
 files:
   exclude:
-    - docs
+    - docs/**/*
